--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{EthicsNLP Term Paper}
+\title{Bias towards Gender in Natural Language and related tasks}
 \author{Shawon Ashraf}
 \date{June 2021}
 
