--- a/main.tex
+++ b/main.tex
@@ -1,14 +1,35 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
+\usepackage[utf8x]{inputenc}
+\usepackage{latexsym}
+\usepackage{amsmath}
+\usepackage{float}
+\usepackage{graphicx}
+\usepackage{booktabs}
+\usepackage{url}
+\usepackage{subcaption}
+\usepackage{hyperref}
 
 \title{Bias towards Gender in Natural Language and related tasks}
 \author{Shawon Ashraf}
-\date{June 2021}
+\date{29 September 2021}
 
-\begin{document}
+
+
+\usepackage[
+style=numeric
+]{biblatex}
+\addbibresource{bib.bib}
 
 \maketitle
 
+\begin{document}
+
+
+
 \section{Introduction}
+
+
+
+\printbibliography
 
 \end{document}
