--- a/main.tex
+++ b/main.tex
@@ -9,8 +9,8 @@
 \usepackage{subcaption}
 \usepackage{hyperref}
 
-\title{Bias towards Gender in Natural Language and related tasks}
-\author{Shawon Ashraf}
+\title{Gender bias in Language from a Natural Language Processing Perspective}
+\author{Shawon Ashraf \\ st170090@stud.uni-stuttgart.de}
 \date{29 September 2021}
 
 
@@ -27,8 +27,25 @@ style=numeric
 
 
 \section{Introduction}
+Introduction goes here
 
+\section{Gender in Language}
+How gender is perceived in language
 
+\section{From Language to Cognition}
+How linguistic components affect cognition and introduce bias towards genders
+
+\section{Bias in Data}
+Source of bias in data, how it's connected to cognitive and linguistic proponents stated above
+
+\section{Gender in NLP}
+Ethical issues, should gender be used as a variable at all, various nlp tasks and bias in them (summaries and opinions on papers)
+
+\section{Mitigating Bias}
+NLP and regular language
+
+\section{Conclusion}
+Sum up alles
 
 \printbibliography
 
