--- a/main.tex
+++ b/main.tex
@@ -27,10 +27,11 @@ style=numeric
 
 
 \section{Introduction}
-Introduction goes here
+Language is one of the most powerful and expressive mediums for humans to express their ideas. However it does not stop at being only a tool for communication, language also influences how humans perceive and build their thought process. This inadvertently dictates how humans develop a notion of structure and entities, for example society, class, gender etc. As Ludwig Wittgenstein had famously said that the limits of our languages define the limits of our cognitive boundary. Since language is a necessary prerequisite to describe any entity or class, which in this paper will be human gender, brings the question that if we can think of the social structure with our language and build around it, does the biases and stereotypes, specifically the ones towards gender get into language as well? Or is it that they are intertwined with human cognition and thus get carried over to the language we use for daily communication. Furthermore, for any Natural Language Processing task, language is the source of data, be it written (text corpora) or spoken (as speech signals). So this brings another question into light, if language can get biased from human cognition and the same language is used as a source for NLP applications, how much such biases affect NLP applications and our usage of language in our daily lives?
 
 \section{Gender in Language}
-How gender is perceived in language
+% How gender is perceived in language
+To begin our discussion, we first need to look at how gender is defined in languages in a formal way.
 
 \section{From Language to Cognition}
 How linguistic components affect cognition and introduce bias towards genders
