--- a/bib.bib
+++ b/bib.bib
@@ -4,3 +4,10 @@
   booktitle={Oxford Research Encyclopedia of Communication},
   year={2017}
 }
+
+@article{larson2017gender,
+  title={Gender as a variable in natural-language processing: Ethical considerations},
+  author={Larson, Brian N},
+  year={2017}
+}
+
