--- a/bib.bib
+++ b/bib.bib
@@ -11,3 +11,9 @@
   year={2017}
 }
 
+@article{braun2005cognitive,
+  title={Cognitive effects of masculine generics in German: An overview of empirical findings},
+  author={Braun, Friederike and Sczesny, Sabine and Stahlberg, Dagmar},
+  year={2005},
+  publisher={Walter de Gruyter}
+}
