--- a/main.tex
+++ b/main.tex
@@ -25,14 +25,18 @@
 \maketitle
 
 \section{Introduction}
-Language is one of the most powerful and expressive mediums for humans to express their ideas. However it does not stop at being only a tool for communication, language also influences how humans perceive and build their thought process. This inadvertently dictates how humans develop a notion of structure and entities, for example society, class, gender etc. As Ludwig Wittgenstein had famously said that the limits of our languages define the limits of our cognitive boundary. Since language is a necessary prerequisite to describe any entity or class, which in this paper will be human gender, brings the question that if we can think of the social structure with our language and build around it, does the biases and stereotypes, specifically the ones towards gender get into language as well? Or is it that they are intertwined with human cognition and thus get carried over to the language we use for daily communication. Furthermore, for any Natural Language Processing task, language is the source of data, be it written (text corpora) or spoken (as speech signals). So this brings another question into light, if language can get biased from human cognition and the same language is used as a source for NLP applications, how much such biases affect NLP applications and our usage of language in our daily lives? In this paper, we look forward to finding answers for such queries and explore how gender bias is embedded in our ways of using our languages.
+Language is one of the most powerful and expressive mediums for humans to express their ideas. However it does not stop at being only a tool for communication, language also influences how humans perceive and build their thought process. This inadvertently dictates how humans develop a notion of structure and entities, for example society, class, gender etc. As Ludwig Wittgenstein had famously said that the limits of our languages define the limits of our cognitive boundary. Since language is a necessary prerequisite to describe any entity or class, which in this paper will be human gender, brings the question that if we can think of the social structure with our language and build around it, does the biases and stereotypes, specifically the ones towards gender get into language as well? Or is it that they are intertwined with human cognition and thus get carried over to the language we use for daily communication. Furthermore, for any Natural Language Processing task, language is the source of data, be it written (text corpora) or spoken (as speech signals). So this brings another question into light, if language can get biased from human cognition and the same language is used as a source for NLP applications, how much such biases affect NLP applications and our usage of language in our daily lives? In this paper, we look forward to finding answers for such queries and explore how gender bias is embedded in the ways we use our languages.
 
 \section{Gender in Language}
 % How gender is perceived in language
-To begin our discussion, we first need to look at how gender is defined in languages in a formal way. According to \cite{larson2017gender}
+To begin our discussion, we first need to look at how gender is defined in language in a formal way. As described in \cite{menegatti2017gender}, languages can be categorized \cite{braun2005cognitive} as Genderless Languages (Finnish, Turkish etc.), Natural Gender Languages (English etc.) and Grammatical Gender Languages (German, Italian etc.).
 
-\section{Gender in Social Structure}
-ll
+\noindent
+\\
+The key differentiator in this categorization is how gender is described in the lexical expressions of a language. Genderless languages do not have grammatical gender for nouns or pronouns, rather for words such as Mother, Father, Sister etc. they resort to what is described as "sex-marking". In Natural Gender Languages, pronouns are used to differentiate between genders and nouns can refer to both male and females, e.g. Doctor, Teacher, Nurse etc. Grammatical Gender Languages have their nouns distinguish between male and female entities and often, the female counterpart of a male word is inflicted from the male word. For example, in German, the female for \textit{Lehrer (Teacher)} is \textit{Lehrerin}. Again, the gender of a word is often defined by the surrounding parts of speech, e.g. \textit{Löffel(Spoon)} is masculine and \textit{Gabeln(Fork)} is feminine. To keep our discussion on point we are going to focus solely on the natural use of gender in language with sex-marking instead of grammatically motivated gender since it corresponds to the topic at hand.
+
+\section{Social View of Gender}
+According to \cite{larson2017gender}
 
 \section{From Language to Cognition}
 How linguistic components affect cognition and introduce bias towards genders
