bias in language

--- a/bib.bib
+++ b/bib.bib
@@ -17,3 +17,82 @@
   year={2005},
   publisher={Walter de Gruyter}
 }
+
+@article{cuddy2008warmth,
+  title={Warmth and competence as universal dimensions of social perception: The stereotype content model and the BIAS map},
+  author={Cuddy, Amy JC and Fiske, Susan T and Glick, Peter},
+  journal={Advances in experimental social psychology},
+  volume={40},
+  pages={61--149},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{ng2007language,
+  title={Language-based discrimination: Blatant and subtle forms},
+  author={Ng, Sik Hung},
+  journal={Journal of Language and Social Psychology},
+  volume={26},
+  number={2},
+  pages={106--122},
+  year={2007},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{eagly1994people,
+  title={Are people prejudiced against women? Some answers from research on attitudes, gender stereotypes, and judgments of competence},
+  author={Eagly, Alice H and Mladinic, Antonio},
+  journal={European review of social psychology},
+  volume={5},
+  number={1},
+  pages={1--35},
+  year={1994},
+  publisher={Taylor \& Francis}
+}
+
+@article{budziszewska2014men,
+  title={Men against feminine job titles. The impact of gender--fair language on men’s and women’s perception of women},
+  author={Budziszewska, M and Hansen, K and Bilewicz, M},
+  journal={J. Lang. Soc. Psychol},
+  volume={33},
+  pages={681--691},
+  year={2014}
+}
+
+@article{rubini2014strategic,
+  title={The strategic role of language abstraction in achieving symbolic and practical goals},
+  author={Rubini, Monica and Menegatti, Michela and Moscatelli, Silvia},
+  journal={European review of social psychology},
+  volume={25},
+  number={1},
+  pages={263--313},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{maass1996language,
+  title={Language and stereotyping},
+  author={Maass, Anne and Arcuri, Luciano},
+  journal={Stereotypes and stereotyping},
+  pages={193--226},
+  year={1996}
+}
+
+@article{sczesny2016can,
+  title={Can gender-fair language reduce gender stereotyping and discrimination?},
+  author={Sczesny, Sabine and Formanowicz, Magda and Moser, Franziska},
+  journal={Frontiers in psychology},
+  volume={7},
+  pages={25},
+  year={2016},
+  publisher={Frontiers}
+}
+
+@article{stahlberg2007representation,
+  title={Representation of the sexes in language},
+  author={Stahlberg, Dagmar and Braun, Friederike and Irmen, Lisa and Sczesny, Sabine},
+  journal={Social communication},
+  pages={163--187},
+  year={2007},
+  publisher={New York and Hove: Psychology Press}
+}
