--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{hyperref}
 \usepackage{booktabs}
 \usepackage{adjustbox}
+\usepackage{breakcites}
 
 \title{Gender bias in Language from a Natural Language Processing Perspective}
 \author{Shawon Ashraf \\ st170090@stud.uni-stuttgart.de}
@@ -60,9 +61,31 @@ The psychological view on the other hand is not constrained by society or tradit
 However, \cite{larson2017gender} also suggest that devising a hierarchy like the one described here is an open ended task and is much more dependent on the research question on what someone expects to do with gender. 
 
 \section*{Gender Bias in Linguistic Processes}
-How linguistic components affect cognition and introduce bias towards genders
+We have seen how gender in language can be motivated by the linguistic structure as well as social structures in the previous sections. The question is, how do they connect to each other? From a neutral perspective, linguistic or grammatical role for words should not effect how they are imagined in a social hierarchy, however the reality is the opposite. \\
 
-\section{Bias in Data}
+\subsection*{Gender stereotypes}
+The first case of gender bias is traced in verbal communication and the roles of communicators in it \cite{menegatti2017gender}. Here, the problem is considered two fold, one being gender stereotypes, which expects gender specific traits or choice of words for communication, the second being considering male form as the general prototype of a human being in many languages. \\ 
+
+\noindent
+Gender stereotypes expect communal or softness or warmth based traits from females and agentic or more competitive traits from males \cite{cuddy2008warmth}. For example, a common gender stereotype would be to compare women with flowers while comparing men with wars and weapons. Such stereotypes lead to role related words being tied to a specific gender. In turn, this leads to giving male roles more power and status, as such roles of higher stature have mostly been held by men in history. This is the social effect, when we connect it to language, we can see that systematically marking some roles for a specific gender creates a cognitive conception that only the gender in contention is suitable for such roles and not the other, thus introducing gender discrimination in the process. This discrimination translates to language when these roles get described in language and over the time get integrated in the structure of the language.
+
+\subsection*{Linguistic Conventions and Abstractions}
+Linguistic conventions on the other hand tend to be gender neutral towards treating words. Despite that, existing gender stereotypes make gender bias normative and over time, the same linguistic conventions can no longer remain neutral. Again, linguistic abstraction becomes another way to introduce gender bias \cite{ng2007language}. There can be words with multiple meanings based on the context and when the users of a language tend to use such words in a specific context, they subconsciously bring forth their gender stereotypes \cite{rubini2014strategic}. \\ 
+
+\noindent
+This entire process becomes a cycle of social roles for genders transforming to gender stereotypes and then eventually making their way into daily use of a language. We can also assume here that gender bias is language has no single contributor, rather it is influenced systematically, as language, society, human cognition are all intertwined. 
+
+\subsection*{Male as a general prototype in languages}
+According to \cite{eagly1994people}, communal roles for women are more to assert male dominance in the society and attribute women more as a subordinate to men. This inadvertently creates a stereotype that men should be prioritised over women to describe a human prototype. This falls in line with ancient scriptures and texts depicting men as leaders, warriors and intellectuals mostly, while women in history fade into oblivion. \\ 
+
+\noindent
+Furthermore, this attitude influences the lexicon of a language as well. For example, words or entities such as \textit{Virgin}, \textit{Working Mother}, \textit{Career Women} etc. have no male counterparts \cite{budziszewska2014men} \cite{maass1996language}.
+
+\subsubsection*{Masculine Generics}
+To extend the topic of perceiving male as a general or generic prototype, we need to look at masculine generics and how they favor males over females. Generic forms for gender comprise mostly of masculine words whereas feminine words are only used to describe female entities. Frequent usage of masculine forms as generics validate the subconscious  gender stereotypes in language users. This can also be associated with the term \textbf{linguistic normativity effect} \cite{menegatti2017gender}, where people tend to associate general forms of a language to a gender which they think should be prioritized. As such, masculine generics, due to their nature of usage, do not consider men and women to be equal and due to women being less relevant to generics, they fail to contribute as a generic entity. Studies from \cite{braun2005cognitive}, \cite{sczesny2016can} have shown that when people are asked to assign a gender to some entity they do not know about, they tend to choose masculine gender more over feminine. When applied to a professional setting, e.g. \textit{Sports}, this stereotype can lead to the notion that in a specific occupation or field of work, women are always outnumbered by men \cite{stahlberg2007representation}. 
+
+
+\section*{Bias in NLP}
 Source of bias in data, how it's connected to cognitive and linguistic proponents stated above
 
 \section{Gender in NLP}
@@ -70,6 +93,10 @@ Ethical issues, should gender be used as a variable at all, various nlp tasks an
 
 \section{Mitigating Bias}
 NLP and regular language
+
+debiasing in nlp
+gender fair expressions
+social change
 
 \section{Conclusion}
 Sum up alles
