--- a/bib.bib
+++ b/bib.bib
@@ -129,3 +129,12 @@
   journal={arXiv preprint arXiv:1805.04508},
   year={2018}
 }
+
+@misc{mikolov2013efficient,
+      title={Efficient Estimation of Word Representations in Vector Space}, 
+      author={Tomas Mikolov and Kai Chen and Greg Corrado and Jeffrey Dean},
+      year={2013},
+      eprint={1301.3781},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
