--- a/main.tex
+++ b/main.tex
@@ -85,17 +85,27 @@ Furthermore, this attitude influences the lexicon of a language as well. For exa
 To extend the topic of perceiving male as a general or generic prototype, we need to look at masculine generics and how they favor males over females. Generic forms for gender comprise mostly of masculine words whereas feminine words are only used to describe female entities. Frequent usage of masculine forms as generics validate the subconscious  gender stereotypes in language users. This can also be associated with the term \textbf{linguistic normativity effect} \cite{menegatti2017gender}, where people tend to associate general forms of a language to a gender which they think should be prioritized. As such, masculine generics, due to their nature of usage, do not consider men and women to be equal and due to women being less relevant to generics, they fail to contribute as a generic entity. Studies from \cite{braun2005cognitive}, \cite{sczesny2016can} have shown that when people are asked to assign a gender to some entity they do not know about, they tend to choose masculine gender more over feminine. When applied to a professional setting, e.g. \textit{Sports}, this stereotype can lead to the notion that in a specific occupation or field of work, women are always outnumbered by men \cite{stahlberg2007representation}. 
 
 
-\section*{Bias in NLP}
+\section*{Gender Bias in NLP}
 So far we have been discussing how gender bias plagues language and how it stems for various norms and stereotypes. Now we move on to various applications of natural language processing which are also affected by gender bias. 
 
 
 \subsection*{Ghost in the shell or bias in data}
-NLP applications such as, Machine Translation, Sentiment Analysis, Text Classification etc. use text corpora as their source. In a typical natural language processing setup, any text data or corpus is first represented in a numerical format, then passed as input to a learning algorithm or to create a model of the data, which afterwards is used for inferring the outputs for the desired tasks. The key thing to note here is the stage between input and the output, also known as the intermediate stage, where any machine learning or predictive algorithm will try to create an understanding of the data it has been fed (hence the term modelling). Depending on the algorithm at use, this intermediate process can either be very simple and explainable, such as Naive Bayes classifiers for finding spam emails to language models based around Transformer architecture such as BERT \cite{devlin-etal-2019-bert}, GPT \cite{brown2020language} etc. Let us put this intermediate step aside for a while and look at the input step. When we are converting text to numbers, e.g. bag of words, we are actually converting the contents of the text. So what is in the text becomes numeric inputs to NLP models. As a result, the gender bias in text gets numerically represented and when the models start learning this representation, they learn the bias in the text as well. This situation is similar to what we have discussed previously that bias gets systematically planted into language. In the following sections, we discuss some work done on finding gender bias in NLP applications.
+NLP applications such as, Machine Translation, Sentiment Analysis, Text Classification etc. use text corpora as their source. In a typical natural language processing setup, any text data or corpus is first represented in a numerical format, then passed as input to a learning algorithm or to create a model of the data, which afterwards is used for inferring the outputs for the desired tasks. The key thing to note here is the stage between input and the output, also known as the intermediate stage, where any machine learning or predictive algorithm will try to create an understanding of the data it has been fed (hence the term modelling). Depending on the algorithm at use, this intermediate process can either be very simple and explainable, such as Naive Bayes classifiers for finding spam emails to language models based around Transformer architecture such as BERT \cite{devlin-etal-2019-bert}, GPT \cite{brown2020language} etc. Let us put this intermediate step aside for a while and look at the input step. When we are converting text to numbers, e.g. bag of words, we are actually converting the contents of the text. So what is in the text becomes numeric inputs to NLP models. As a result, the gender bias in text gets numerically represented and when the models start learning this representation, they learn the bias in the text as well. This situation is similar to what we have discussed previously that bias gets systematically planted into language. In the following sections, we discuss some work done on evaluating gender bias in NLP applications.
 
 \subsection*{Sentiment Analysis}
-To discuss gender bias in sentiment analysis we are going to focus on \cite{kiritchenko2018examining}, where the authors try to evaluate if machine learning models exhibit human like bias and how it affects the overall results. \\
+When we talk about sentiment analysis in NLP, we are generally referring to finding the emotion or sentiment conveyed in a piece of text. This can be as fine grained as inferring emotion labels such as joy, anger etc. to more generalized overviews, such as positive, negative, neutral. To discuss gender bias in sentiment analysis we are going to focus on \cite{kiritchenko2018examining}, where the authors try to evaluate if machine learning models exhibit human like bias and how it affects the overall results. \\
 
 
+\subsubsection*{Affective bias towards gender}
+
+\noindent
+All the models evaluated in this study were submitted to SemEval-2018 for Task 1 "Affect in Tweets" where the goal was to find emotion and sentiment intensity in tweets. The authors hypothesized that when a model infers the emotion and sentiment inetnsity in a sentence, it should not be influenced by the gender or race of the subject in the person. For our discussion we are going to focus on the gender related analysis only.  \\
+
+\noindent
+To test their hypothesis against the submitted models, the authors created a benchmark corpus named "Equity Evaluation Coprus" or EEC in short. Their method checked if the output of a submitted system, which is the predicted emotion and sentiment intensity varies if the subject or person or entity in the input sentence has a different gender. If the output of their evaluation on the EEC deviated from their hypothesis, they kept note of which gender was assigned more of a specific set of emotions. Since NLP models learn the contents of the input, the authors made sure that their corpus was grammatically simple and short so that they analyze the outputs from the models. Their experiments on the submitted models showed that there was significant gender bias in the outputs of the models. The models assigned positive emotions to male entity names more than the female names. About 75\% to 86\% results showed gender bias. When analyzed, it was found that the models were prone to the same communal and agentic role oriented stereotypes we discussed earlier. For example, emotion labels such as joy, ecstatic etc. were more associated with male names and labels similar to fear, anxious etc. were associated on the opposite side.
+
+\subsubsection*{Source of the bias}
+Despite using a simple sentence structure corpus, the models exhibited gender bias. So the question arises, what is the source of this bias? Do models have subconscious bias like us humans? Models only learn distributions from numeric data, so if models get biased in the process it can entirely random and a different set of algorithms may exhibit different results. Another question can be asked that, most of the state of the art NLP models make extensive use of word embeddings such as Word2Vec \cite{mikolov2013efficient}. These embeddings are trained on text data from varied sources, which can contain gender bias. For example, if a word embedding was collected from newspaper text only, then it only has the representation of a more formal language, which can be prone to using masculine generics and other stereotypes. So the source of the word embedding can be worth exploring. The authors are of the opinion that there is no simple answer to where the bias actually comes from and consider it as a topic to be further explored and experimented on.
 
 
 
