--- a/main.tex
+++ b/main.tex
@@ -107,6 +107,17 @@ To test their hypothesis against the submitted models, the authors created a ben
 \subsubsection*{Source of the bias}
 Despite using a simple sentence structure corpus, the models exhibited gender bias. So the question arises, what is the source of this bias? Do models have subconscious bias like us humans? Models only learn distributions from numeric data, so if models get biased in the process it can entirely random and a different set of algorithms may exhibit different results. Another question can be asked that, most of the state of the art NLP models make extensive use of word embeddings such as Word2Vec \cite{mikolov2013efficient}. These embeddings are trained on text data from varied sources, which can contain gender bias. For example, if a word embedding was collected from newspaper text only, then it only has the representation of a more formal language, which can be prone to using masculine generics and other stereotypes. So the source of the word embedding can be worth exploring. The authors are of the opinion that there is no simple answer to where the bias actually comes from and consider it as a topic to be further explored and experimented on.
 
+\subsection*{Biased Word Embeddings}
+In the last section, we talked about gender biased word embeddings and how the source of the word embeddings can affect it. In their work, \cite{bolukbasi2016man} show that word embeddings can indeed get gender bias from the text they were trained with. For example, engineers are pre-dominantly male while women are more associated to house-wives. Word embeddings are essentially trained in an unsupervised approach, meaning, they only have the input data and no reference label to check their output against. So for example if someone trains word embeddings from San Tzus Art of War, the embeddings will only have knowledge on military and warefare. Since generalized word embeddings exhibit gender bias, a case can be made that the training data for the word embeddings be free from gender bias or have very minimum amount of it. (This falls into the area of debiasing which we shall discuss in a later section of this paper.). 
+
+\subsubsection*{Contextualized word embeddings}
+Word embeddings such as GloVe \cite{pennington2014glove} and Word2Vec have a singular representation for all the text in the corpus. They are not context sensitive. So even if there are multiple context sensitive usages of a word, it will still have a one single embedding for all the contexts. On the other hand, word embeddings from ELMo \cite{peters2018deep} are contextualized. Since contextualized embeddings learn the context of the word, they should be better able to infer the meaning of a word in a specific context and also learn the gender properly as well. While the first part of this assumption is true, the latter is not. \cite{zhao2019gender} have shown that ELMo shows significantly more gender bias in a Coreference Resolution task than a similar system based on GloVe \cite{lee2018higher}, in fact bias in the ELMo based system in their experiment showed 30\% more bias than the GloVe based system. Also, while analysing their results the authors made some interesting revelations. First, the training data for ELMo contained an imbalanced ratio of male to female entities, which they found to be 1:3. Second, the encoding process or the conversion process of ELMo does not give equal emphasis to both genders, hence resulting in a skewed distribution, biased more towards males.  \\
+
+\noindent
+Since word embeddings are unsupervised learners and going to learn the distribution in the training data, we can say here that input or training data is perhaps the biggest culprit in inducing gender bias. Coreference Resolution, as stated earlier, is one of the tasks where gender bias is almost omnipresent. In the next section, we are going to discuss about this. 
+
+
+
 
 
 \section{Gender in NLP}
