--- a/bib.bib
+++ b/bib.bib
@@ -138,3 +138,45 @@
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
+
+@article{bolukbasi2016man,
+  title={Man is to computer programmer as woman is to homemaker? debiasing word embeddings},
+  author={Bolukbasi, Tolga and Chang, Kai-Wei and Zou, James Y and Saligrama, Venkatesh and Kalai, Adam T},
+  journal={Advances in neural information processing systems},
+  volume={29},
+  pages={4349--4357},
+  year={2016}
+}
+
+@inproceedings{pennington2014glove,
+  author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
+  booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
+  title = {GloVe: Global Vectors for Word Representation},
+  year = {2014},
+  pages = {1532--1543},
+  url = {http://www.aclweb.org/anthology/D14-1162},
+}
+
+
+@misc{peters2018deep,
+      title={Deep contextualized word representations}, 
+      author={Matthew E. Peters and Mark Neumann and Mohit Iyyer and Matt Gardner and Christopher Clark and Kenton Lee and Luke Zettlemoyer},
+      year={2018},
+      eprint={1802.05365},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@article{zhao2019gender,
+  title={Gender bias in contextualized word embeddings},
+  author={Zhao, Jieyu and Wang, Tianlu and Yatskar, Mark and Cotterell, Ryan and Ordonez, Vicente and Chang, Kai-Wei},
+  journal={arXiv preprint arXiv:1904.03310},
+  year={2019}
+}
+
+@article{lee2018higher,
+  title={Higher-order coreference resolution with coarse-to-fine inference},
+  author={Lee, Kenton and He, Luheng and Zettlemoyer, Luke},
+  journal={arXiv preprint arXiv:1804.05392},
+  year={2018}
+}
