--- a/bib.bib
+++ b/bib.bib
@@ -180,3 +180,20 @@
   journal={arXiv preprint arXiv:1804.05392},
   year={2018}
 }
+
+@inproceedings{rudinger-etal-2018-gender,
+    title = "Gender Bias in Coreference Resolution",
+    author = "Rudinger, Rachel  and
+      Naradowsky, Jason  and
+      Leonard, Brian  and
+      Van Durme, Benjamin",
+    booktitle = "Proceedings of the 2018 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 2 (Short Papers)",
+    month = jun,
+    year = "2018",
+    address = "New Orleans, Louisiana",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/N18-2002",
+    doi = "10.18653/v1/N18-2002",
+    pages = "8--14",
+    abstract = "We present an empirical study of gender bias in coreference resolution systems. We first introduce a novel, Winograd schema-style set of minimal pair sentences that differ only by pronoun gender. With these {``}Winogender schemas,{''} we evaluate and confirm systematic gender bias in three publicly-available coreference resolution systems, and correlate this bias with real-world and textual gender statistics.",
+}
