--- a/bib.bib
+++ b/bib.bib
@@ -197,3 +197,29 @@
     pages = "8--14",
     abstract = "We present an empirical study of gender bias in coreference resolution systems. We first introduce a novel, Winograd schema-style set of minimal pair sentences that differ only by pronoun gender. With these {``}Winogender schemas,{''} we evaluate and confirm systematic gender bias in three publicly-available coreference resolution systems, and correlate this bias with real-world and textual gender statistics.",
 }
+
+@inproceedings{saunders-byrne-2020-reducing,
+    title = "Reducing Gender Bias in Neural Machine Translation as a Domain Adaptation Problem",
+    author = "Saunders, Danielle  and
+      Byrne, Bill",
+    booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+    month = jul,
+    year = "2020",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2020.acl-main.690",
+    doi = "10.18653/v1/2020.acl-main.690",
+    pages = "7724--7736",
+    abstract = "Training data for NLP tasks often exhibits gender bias in that fewer sentences refer to women than to men. In Neural Machine Translation (NMT) gender bias has been shown to reduce translation quality, particularly when the target language has grammatical gender. The recent WinoMT challenge set allows us to measure this effect directly (Stanovsky et al, 2019) Ideally we would reduce system bias by simply debiasing all data prior to training, but achieving this effectively is itself a challenge. Rather than attempt to create a {`}balanced{'} dataset, we use transfer learning on a small set of trusted, gender-balanced examples. This approach gives strong and consistent improvements in gender debiasing with much less computational cost than training from scratch. A known pitfall of transfer learning on new domains is {`}catastrophic forgetting{'}, which we address at adaptation and inference time. During adaptation we show that Elastic Weight Consolidation allows a performance trade-off between general translation quality and bias reduction. At inference time we propose a lattice-rescoring scheme which outperforms all systems evaluated in Stanovsky et al, 2019 on WinoMT with no degradation of general test set BLEU. We demonstrate our approach translating from English into three languages with varied linguistic properties and data availability.",
+}
+
+@article{misersky2019grammatical,
+  title={Grammatical gender in German influences how role-nouns are interpreted: Evidence from ERPs},
+  author={Misersky, Julia and Majid, Asifa and Snijders, Tineke M},
+  journal={Discourse Processes},
+  volume={56},
+  number={8},
+  pages={643--654},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
