--- a/bib.bib
+++ b/bib.bib
@@ -223,3 +223,27 @@
   year={2019},
   publisher={Taylor \& Francis}
 }
+
+@inproceedings{gaut-etal-2020-towards,
+    title = "Towards Understanding Gender Bias in Relation Extraction",
+    author = "Gaut, Andrew  and
+      Sun, Tony  and
+      Tang, Shirlyn  and
+      Huang, Yuxin  and
+      Qian, Jing  and
+      ElSherief, Mai  and
+      Zhao, Jieyu  and
+      Mirza, Diba  and
+      Belding, Elizabeth  and
+      Chang, Kai-Wei  and
+      Wang, William Yang",
+    booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+    month = jul,
+    year = "2020",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2020.acl-main.265",
+    doi = "10.18653/v1/2020.acl-main.265",
+    pages = "2943--2953",
+    abstract = "Recent developments in Neural Relation Extraction (NRE) have made significant strides towards Automated Knowledge Base Construction. While much attention has been dedicated towards improvements in accuracy, there have been no attempts in the literature to evaluate social biases exhibited in NRE systems. In this paper, we create WikiGenderBias, a distantly supervised dataset composed of over 45,000 sentences including a 10{\%} human annotated test set for the purpose of analyzing gender bias in relation extraction systems. We find that when extracting spouse-of and hypernym (i.e., occupation) relations, an NRE system performs differently when the gender of the target entity is different. However, such disparity does not appear when extracting relations such as birthDate or birthPlace. We also analyze how existing bias mitigation techniques, such as name anonymization, word embedding debiasing, and data augmentation affect the NRE system in terms of maintaining the test performance and reducing biases. Unfortunately, due to NRE models rely heavily on surface level cues, we find that existing bias mitigation approaches have a negative effect on NRE. Our analysis lays groundwork for future quantifying and mitigating bias in NRE.",
+}
