mitigate lang bias

--- a/main.tex
+++ b/main.tex
@@ -133,9 +133,16 @@ Gender bias in Machine Translation stems from coreference resolution, which we h
 Let us reconsider the Folk view of gender again. In many cultures, either motivated by religious or traditional beliefs the concept of gender is binary and anything else is almost rejected. However, concepts such as gender are not rigid, and many languages at present have adopted more gender neutral wordings for pronouns and professions to keep up with social changes \cite{misersky2019grammatical}. This poses a big problem for languages which are yet to adopt a newer overview of gender. As a result when translating from languages with the newer overview to older ones, the output is more likely to suffer from qualitative issues. 
 
 
-\section*{Mitigating Bias}
 
+\section*{Mitigating Bias in Language}
 
+\subsection*{Using Gender Fair Expressions}
+In many cases, masculine generics can indeed be replaced with gender fair or gender neutral words. Especially in case of profession related words where studies from \cite{bem1973does} have shown that gender neutral wordings for position resulted in an increased interest from women to apply. However, gender fair expressions have also caused double sided effects \cite{horvath2016does}, where using word pairs have resulted in the opposite effect of creating more opportunities for men instead of creating equality. So this remains a topic for further exploration and careful curation, especially, we need to consider how to devise gender neutral wordings such that they do not create the aforementioned double-sided effect.
+
+\subsection*{Conscious usage of language}
+\cite{menegatti2017gender} call for a more consciuous and well aware usage of language, which involves understanding the present sex-marking and gender stereotypes in language and finding a way out of this situation. Although they consider gender fair expressions to be a solution, they also mention the issue discussed above and opine that this notion should be explored further. Moreover, there are more abstract notions of gender which do not get covered in gender opportunity related studies and often these abstract concepts are not made clear to the common mass, which should also be considered. For example, the call to legalize same sex marriage has met with hostility in many places, especially where people hold strong traditional beliefs, as such, paranoia and misinformation often create a wrong conception about this issue.  
+
+\section*{Mitigating Bias in NLP}
 
 
 \section*{Conclusion}
