--- a/bib.bib
+++ b/bib.bib
@@ -247,3 +247,25 @@
     pages = "2943--2953",
     abstract = "Recent developments in Neural Relation Extraction (NRE) have made significant strides towards Automated Knowledge Base Construction. While much attention has been dedicated towards improvements in accuracy, there have been no attempts in the literature to evaluate social biases exhibited in NRE systems. In this paper, we create WikiGenderBias, a distantly supervised dataset composed of over 45,000 sentences including a 10{\%} human annotated test set for the purpose of analyzing gender bias in relation extraction systems. We find that when extracting spouse-of and hypernym (i.e., occupation) relations, an NRE system performs differently when the gender of the target entity is different. However, such disparity does not appear when extracting relations such as birthDate or birthPlace. We also analyze how existing bias mitigation techniques, such as name anonymization, word embedding debiasing, and data augmentation affect the NRE system in terms of maintaining the test performance and reducing biases. Unfortunately, due to NRE models rely heavily on surface level cues, we find that existing bias mitigation approaches have a negative effect on NRE. Our analysis lays groundwork for future quantifying and mitigating bias in NRE.",
 }
+
+
+@article{bem1973does,
+  title={Does Sex-biased Job Advertising “Aid and Abet” Sex Discrimination? 1},
+  author={Bem, Sandra L and Bem, Daryl J},
+  journal={Journal of Applied Social Psychology},
+  volume={3},
+  number={1},
+  pages={6--18},
+  year={1973},
+  publisher={Wiley Online Library}
+}
+
+@article{horvath2016does,
+  title={Does gender-fair language pay off? The social perception of professions from a cross-linguistic perspective},
+  author={Horvath, Lisa K and Merkel, Elisa F and Maass, Anne and Sczesny, Sabine},
+  journal={Frontiers in psychology},
+  volume={6},
+  pages={2018},
+  year={2016},
+  publisher={Frontiers}
+}
